kuber/src/wp3/wp-dep.yml

# k create deploy wp-dep --image="wordpress:5" $out
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wp-dep
  labels:
    tag: wp3

spec:
  replicas: 2
  selector:
    matchLabels:
      app: wp-dep-pod

  template:
    metadata:
      labels:
        app: wp-dep-pod
        tag: wp3
    spec:
      containers:
      - image: wordpress:5
        name: wordpress
        ports:
        - containerPort: 80
---
# k expose deploy wp-dep --port=80 --type=NodePort --name=wp-svc $out
apiVersion: v1
kind: Service
metadata:
  name: wp-svc
  labels:
    tag: wp3

spec:
  selector:
    app: wp-dep-pod
  type: NodePort
  ports:
  - name: http80
    port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 30088
