kuber/src/wp3/wp-ing.yml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: wp-ngx-ink
  labels:
    tag: wp3

spec:
  controller: nginx.org/ingress-controller

---

# k create ing wp-ing --rule="wp.test/=wp-svc:80" --class=wp-ngx-ink $out
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wp-ing
  labels:
    tag: wp3

spec:
  ingressClassName: wp-ngx-ink
  tls:
  - hosts:
    - wp.test
    secretName: ngx.test-secret
  rules:
  - host: wp.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wp-svc
            port:
              number: 80

---
# copied from ../ingress/kic-dep.yml
# use hostNetwork
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: nginx-ingress
  name: wp-kic-dep
  labels:
    tag: wp3

spec:
  replicas: 1
  selector:
    matchLabels:
      app: wp-kic-dep-pod

  template:
    metadata:
      labels:
        app: wp-kic-dep-pod
        tag: wp3
    spec:
      serviceAccountName: nginx-ingress

      # # use host network
      # hostNetwork: true

      containers:
      - image: nginx/nginx-ingress:2.3-alpine
        imagePullPolicy: IfNotPresent
        name: nginx-ingress
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
        - name: readiness-port
          containerPort: 8081
        - name: prometheus
          containerPort: 9113
        readinessProbe:
          httpGet:
            path: /nginx-ready
            port: readiness-port
          periodSeconds: 1
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
        securityContext:
          allowPrivilegeEscalation: true
          runAsUser: 101 #nginx
          runAsNonRoot: true
          capabilities:
            drop:
            - ALL
            add:
            - NET_BIND_SERVICE
        args:
          - -ingress-class=wp-ngx-ink
          - -health-status
          - -ready-status
          - -nginx-status
          - -nginx-configmaps=$(POD_NAMESPACE)/nginx-config
          - -default-server-tls-secret=$(POD_NAMESPACE)/default-server-secret

---
# k expose deploy wp-kic-dep --port=80,443 --type=NodePort --name=wp-kic-svc -n nginx-ingress $out
apiVersion: v1
kind: Service
metadata:
  name: wp-kic-svc
  namespace: nginx-ingress
  labels:
    tag: wp3

spec:
  selector:
    app: wp-kic-dep-pod
  type: NodePort
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 30080
  - name: https
    port: 443
    protocol: TCP
    targetPort: 443
    nodePort: 30443
